--- a/frix63/index.html
+++ b/frix63/index.html
@@ -27,7 +27,7 @@
         <div id="SB1" onclick="opensidebar()" class="SideBar"><b class="textbutton">☰</b></div>
         <div id="SB3" onclick="opensidebar()" class="SideBarOpened">
             <a href="index.html">
-                <img src="homebutton.png" alt="home button" width="45" height="45" style="z-index: 5; float:right; margin: 4px 5px; filter: invert(31%) sepia(20%) saturate(1974%) hue-rotate(159deg) brightness(95%) contrast(97%); overflow: hidden; -moz-user-select: none; -webkit-user-select: none; -ms-user-select: none;"></img>
+                <img src="homebutton.png" alt="home button" class="homebutton""></img>
             </a>
         </div>
         <div id="SB2" class="SideBarOpen">
@@ -41,7 +41,7 @@
                 <p id="sidebartext" class="textleftbar">Software</p>
             </div>
             <div>
-                <p>void</p>
+                <p style="color:#115D8C;">void</p>
             </div>
             <div class="sidebarbox">
                 <p id="sidebartext" class="textleftbar">Music</p>
@@ -53,10 +53,31 @@
                 <p id="sidebartext" class="textleftbar">Contact</p>
             </div>
         </div>
-        <b class="text">
+        <div class="topbar">
+            <div class="topbarbox">
+                <p class="topbartext">About me</p>
+            </div>
+            <div class="topbarbox">
+                <p class="topbartext">Photos</p>
+            </div>
+            <div class="topbarbox">
+                <p class="topbartext">Software</p>
+            </div>
+            <div class="topbarbox">
+                <p class="topbartext">Music</p>
+            </div>
+            <div class="topbarbox">
+                <p class="topbartext">Art</p>
+            </div>
+            <div class="topbarbox">
+                <p class="topbartext">Contact</p>
+            </div>
+        </div>
+    </div>
+    <b class="text">
             Work in progress
         </b>
-        <a href="html/contact.html" class="text">USELESS TEXT?</a>
+    <a href="html/contact.html" class="text">USELESS TEXT?</a>
 
 </body>
 
