--- a/frix63/index.html
+++ b/frix63/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="topbar">
             <div class="topbarbox">
-                <p class="topbartext">About me</p>
+                <p id="aboutme" class="topbartext">About<br>me</p>
             </div>
             <div class="topbarbox">
                 <p class="topbartext">Photos</p>
