--- a/frix63/html/aboutme.html
+++ b/frix63/html/aboutme.html
@@ -3,8 +3,8 @@
 
 <head>
     <title>Frix63</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="javascript.js"></script>
+    <link rel="stylesheet" href="../style.css">
+    <script src="../javascript.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
@@ -20,16 +20,23 @@
             <p class="centertext">Frix63</p>
         </div>
     </div>
+    <div class="page">
+        <div class="page1">
+            <img src="../imgs/other/pfp.png" alt="profile picture" class="pfp"></img>
+            <p class="text">Hi my name is Chris and I am 17 years old. I am student of IT high school. In my free time I am doing photography, programming, music, graphics, video editing, video games, airsoft and art. I am doing graphics since my 9 years old when I started
+                with simple staff and after around 2 years later i started doing things with adobe programms like photoshop. Besides that i started with video editing. I can work with multiple editing softwares: Adobe Premiere, Sony Vegas, DaVinci Resolve</p>
+        </div>
+    </div>
     <div class="container">
         <div id="SB1" onclick="opensidebar()" class="SideBar"><b class="textbutton">☰</b></div>
         <div id="SB3" onclick="opensidebar()" class="SideBarOpened">
-            <a href="index.html">
-                <img src="homebutton.png" alt="home button" class="homebutton""></img>
+            <a href="../index.html">
+                <img src="../homebutton.png" alt="home button" class="homebutton""></img>
             </a>
         </div>
         <div id="SB2" class="SideBarOpen">
             <div class="sidebarbox">
-                <a href="html/aboutme.html">
+                <a href="../html/aboutme.html">
                     <p id="sidebartext" class="textleftbar">About me</p>
                 </a>
             </div>
@@ -54,7 +61,7 @@
         </div>
         <div class="topbar">
             <div class="topbarbox">
-                <a href="html/aboutme.html">
+                <a href="../html/aboutme.html">
                     <p id="aboutme" class="topbartext">About<br>me</p>
                 </a>
             </div>
