--- a/frix63/html/aboutme.html
+++ b/frix63/html/aboutme.html
@@ -14,17 +14,27 @@
 </head>
 
 <body>
-    <div class="bckggrid"></div>
-    <div class="container">
-        <div class="">
-            <p class="centertext">Frix63</p>
-        </div>
-    </div>
     <div class="page">
         <div class="page1">
             <img src="../imgs/other/pfp.png" alt="profile picture" class="pfp"></img>
-            <p class="text">Hi my name is Chris and I am 17 years old. I am student of IT high school. In my free time I am doing photography, programming, music, graphics, video editing, video games, airsoft and art. I am doing graphics since my 9 years old when I started
-                with simple staff and after around 2 years later i started doing things with adobe programms like photoshop. Besides that i started with video editing. I can work with multiple editing softwares: Adobe Premiere, Sony Vegas, DaVinci Resolve</p>
+            <h1 class="text" style="font-size: 1.5rem;">About me</h2>
+                <p class="text">Hi! My name is Christopher and I am a 17-year-old student at the most prestige IT school in Prague. In my free time, I am doing photography, filming, programming, coding, music, graphics, video editing, and art and I am playing video games
+                    and airsoft.
+                </p>
+                <h2 class="subheading">Graphics</h2>
+                <p class="text">
+                    I do graphics since my 9 years old where I started with simple stuff and around 2 years later I started doing more complex things with adobe programs like photoshop. Besides that, I started with video editing. I can work with multiple video editing software:
+                    Adobe Premiere, Sony Vegas, DaVinci Resolve, and Adobe After Effects.
+                </p>
+                <h2 class="subheading">Programming and coding</h2>
+                <p class="text">
+                    I started programming and coding in high school and I can work with C#, Python, HTML, JavaScript, and CSS but I learn the theory of algorithms from the beginning of secondary school.
+                </p>
+                <h2 class="subheading">Photography</h2>
+                <p class="text">
+                    In the meantime, I joined some high school projects about filming and photographing and there I got myself into photography. I own sony a6400 a camera that is capable of both filming and shooting photos. To this day I filmed 2 student films, 1 student
+                    advertisement and professionally filmed illustrative shots for Czech TV and some festivals + I am highly capable of setting up live streams.
+                </p>
         </div>
     </div>
     <div class="container">
