--- a/frix63/index.html
+++ b/frix63/index.html
@@ -33,7 +33,9 @@
                 </a>
             </div>
             <div class="sidebarbox">
-                <p id="sidebartext" class="textleftbar">Photos</p>
+                <a href="html/gallery.html">
+                    <p id="sidebartext" class="textleftbar">Photos</p>
+                </a>
             </div>
             <div class="sidebarbox">
                 <p id="sidebartext" class="textleftbar">Software</p>
@@ -58,7 +60,9 @@
                 </a>
             </div>
             <div class="topbarbox">
-                <p class="topbartext">Photos</p>
+                <a href="html/gallery.html">
+                    <p class="topbartext">Photos</p>
+                </a>
             </div>
             <div class="topbarbox">
                 <p class="topbartext">Software</p>
