--- a/frix63/html/aboutme.html
+++ b/frix63/html/aboutme.html
@@ -69,6 +69,8 @@
                 <p id="sidebartext" class="textleftbar">Contact</p>
             </div>
         </div>
+    </div>
+    <div class="topbarcontainer">
         <div class="topbar">
             <div class="topbarbox">
                 <a href="../html/aboutme.html">
