--- a/frix63/index.html
+++ b/frix63/index.html
@@ -53,16 +53,16 @@
                 <p id="sidebartext" class="textleftbar">Contact</p>
             </div>
         </div>
+    </div>
+    <div class="topbarcontainer">
         <div class="topbar">
             <div class="topbarbox">
-                <a href="html/aboutme.html">
+                <a href="/html/aboutme.html">
                     <p id="aboutme" class="topbartext">About<br>me</p>
                 </a>
             </div>
             <div class="topbarbox">
-                <a href="html/gallery.html">
-                    <p class="topbartext">Photos</p>
-                </a>
+                <p class="topbartext">Photos</p>
             </div>
             <div class="topbarbox">
                 <p class="topbartext">Software</p>
