--- a/frix63/html/aboutme.html
+++ b/frix63/html/aboutme.html
@@ -41,7 +41,7 @@
         <div id="SB1" onclick="opensidebar()" class="SideBar"><b class="textbutton">☰</b></div>
         <div id="SB3" onclick="opensidebar()" class="SideBarOpened">
             <a href="../index.html">
-                <img src="../homebutton.png" alt="home button" class="homebutton""></img>
+                <img src="../homebutton.png" alt="home button" class="homebutton"></img>
             </a>
         </div>
         <div id="SB2" class="SideBarOpen">
@@ -51,7 +51,9 @@
                 </a>
             </div>
             <div class="sidebarbox">
-                <p id="sidebartext" class="textleftbar">Photos</p>
+                <a href="../html/gallery.html">
+                    <p id="sidebartext" class="textleftbar">Photos</p>
+                </a>
             </div>
             <div class="sidebarbox">
                 <p id="sidebartext" class="textleftbar">Software</p>
@@ -72,14 +74,16 @@
     </div>
     <div class="topbarcontainer">
         <div class="topbar">
-            <div class="topbarbox">
-                <a href="../html/aboutme.html">
+            <a href="../html/aboutme.html">
+                <div class="topbarbox">
                     <p id="aboutme" class="topbartext">About<br>me</p>
-                </a>
-            </div>
-            <div class="topbarbox">
-                <p class="topbartext">Photos</p>
-            </div>
+                </div>
+            </a>
+            <a href="../html/gallery.html">
+                <div class="topbarbox">
+                    <p class="topbartext">Photos</p>
+                </div>
+            </a>
             <div class="topbarbox">
                 <p class="topbartext">Software</p>
             </div>
