--- a/frix63/index.html
+++ b/frix63/index.html
@@ -14,16 +14,14 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="">
-            <p class="centertext">Frix63</p>
-        </div>
+    <div class="Frix63">
+        <p class="centertext">Frix63</p>
     </div>
     <div class="container">
         <div id="SB1" onclick="opensidebar()" class="SideBar"><b class="textbutton">☰</b></div>
         <div id="SB3" onclick="opensidebar()" class="SideBarOpened">
             <a href="index.html">
-                <img src="homebutton.png" alt="home button" class="homebutton""></img>
+                <img src="homebutton.png" alt="home button" class="homebutton"></img>
             </a>
         </div>
         <div id="SB2" class="SideBarOpen">
@@ -56,14 +54,16 @@
     </div>
     <div class="topbarcontainer">
         <div class="topbar">
-            <div class="topbarbox">
-                <a href="/html/aboutme.html">
+            <a href="html/aboutme.html">
+                <div class="topbarbox">
                     <p id="aboutme" class="topbartext">About<br>me</p>
-                </a>
-            </div>
-            <div class="topbarbox">
-                <p class="topbartext">Photos</p>
-            </div>
+                </div>
+            </a>
+            <a href="html/gallery.html">
+                <div class="topbarbox">
+                    <p class="topbartext">Photos</p>
+                </div>
+            </a>
             <div class="topbarbox">
                 <p class="topbartext">Software</p>
             </div>
