--- a/frix63/html/gallery.html
+++ b/frix63/html/gallery.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <div class="ImageView"></div>
     <div class="page">
         <div class="page1">
             <h2 class="subheading">Photos</h2>
@@ -20,6 +21,11 @@
                 <div id="duphotos1">
                     <div class="photoswrapper">
                         <img id="photo1" src="../imgs/Photos/Thumbnails/(1).jpg" alt="photo1" class="photo">
+                    </div>
+                    <div class="ImgEnlargeWrapper">
+                        <div class="enlargeTBox">
+                            <p class="enlargeT">⛶</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -30,7 +36,7 @@
         <div id="SB1" onclick="opensidebar()" class="SideBar"><b class="textbutton">☰</b></div>
         <div id="SB3" onclick="opensidebar()" class="SideBarOpened">
             <a href="../index.html">
-                <img src="../homebutton.png" alt="home button" class="homebutton""></img>
+                <img src="../homebutton.png" alt="home button" class="homebutton"></img>
             </a>
         </div>
         <div id="SB2" class="SideBarOpen">
@@ -40,7 +46,9 @@
                 </a>
             </div>
             <div class="sidebarbox">
-                <p id="sidebartext" class="textleftbar">Photos</p>
+                <a href="../html/gallery.html">
+                    <p id="sidebartext" class="textleftbar">Photos</p>
+                </a>
             </div>
             <div class="sidebarbox">
                 <p id="sidebartext" class="textleftbar">Software</p>
@@ -61,14 +69,16 @@
     </div>
     <div class="topbarcontainer">
         <div class="topbar">
-            <div class="topbarbox">
-                <a href="../html/aboutme.html">
+            <a href="../html/aboutme.html">
+                <div class="topbarbox">
                     <p id="aboutme" class="topbartext">About<br>me</p>
-                </a>
-            </div>
-            <div class="topbarbox">
-                <p class="topbartext">Photos</p>
-            </div>
+                </div>
+            </a>
+            <a href="../html/gallery.html">
+                <div class="topbarbox">
+                    <p class="topbartext">Photos</p>
+                </div>
+            </a>
             <div class="topbarbox">
                 <p class="topbartext">Software</p>
             </div>
