--- a/frix63/html/gallery.html
+++ b/frix63/html/gallery.html
@@ -4,34 +4,40 @@
 <head>
     <title>Frix63</title>
     <link rel="stylesheet" href="../style.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 </head>
 
 <body>
-    <div class="ImageView"></div>
+    <div class="ImageViewBackgroundDiv"></div>
+
     <div class="page">
         <div class="page1">
             <h2 class="subheading">Photos</h2>
             <div class="Photos">
                 <div id="duphotos1">
-                    <div class="photoswrapper">
+
+                    <div onclick="ImageEnlargeFunction()" class="photoswrapper">
                         <img id="photo1" src="../imgs/Photos/Thumbnails/(1).jpg" alt="photo1" class="photo">
                     </div>
+
                     <div class="ImgEnlargeWrapper">
                         <div class="enlargeTBox">
                             <p class="enlargeT">⛶</p>
                         </div>
                     </div>
+
                 </div>
             </div>
         </div>
     </div>
-    </div>
+
     <div class="container">
         <div id="SB1" onclick="opensidebar()" class="SideBar"><b class="textbutton">☰</b></div>
         <div id="SB3" onclick="opensidebar()" class="SideBarOpened">
@@ -67,6 +73,7 @@
             </div>
         </div>
     </div>
+
     <div class="topbarcontainer">
         <div class="topbar">
             <a href="../html/aboutme.html">
