--- a/frix63/html/gallery.html
+++ b/frix63/html/gallery.html
@@ -15,7 +15,9 @@
 </head>
 
 <body>
-    <div class="ImageViewBackgroundDiv"></div>
+    <div onclick="ImageEnlargeFunctionClose()" id="IVBD" class="ImageViewBackgroundDiv">
+        <img id="enlargedIMG"></img>
+    </div>
 
     <div class="page">
         <div class="page1">
