--- a/BlackAndWhite/index.html
+++ b/BlackAndWhite/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-    <div class="header">
+    <nav class="header">
 
         <div class="shopIconDiv">
             <img src="ShopIcon.png" alt="shop-icon" class="shopIconNavBar">
@@ -23,7 +23,7 @@
             <li><a href="">HOME</a></li>
             <li><a href="">SHOP</a></li>
             <li><a href="">ABOUT US</a></li>
-        </ul></div>
+        </ul></nav>
 
     <div class="homePageMain">
         <div class="mainLogoTextInTheMiddle">BLACK & WHITE</div>
@@ -43,6 +43,11 @@
     </div>
 
     <div class="backgroundBottom"></div>
+
+    <footer class="footer">
+        <h1 class="copyright">2023 © BLACK & WHITE</h1>
+        <h1 class="Signature">Christopher M. Lederer</h1>
+    </footer>
 
 </body>
 </html>
