--- a/BlackAndWhite/index.html
+++ b/BlackAndWhite/index.html
@@ -23,7 +23,8 @@
             <li><a href="">HOME</a></li>
             <li><a href="">SHOP</a></li>
             <li><a href="">ABOUT US</a></li>
-        </ul></nav>
+        </ul>
+    </nav>
 
     <div class="homePageMain">
         <div class="mainLogoTextInTheMiddle">BLACK & WHITE</div>
@@ -40,6 +41,10 @@
             <h2>BLACK & WHITE</h2>
             <p>Ten nejlepší produkt pro vaše zdraví. Obsahuje pouze přírodní látky. Pro může i pro ženy.</p>
         </article>
+        <div class="buyButton">
+            <div class="price">200kč</div>
+            <img src="ShopIcon.png" alt="shopbuy-icon" class="shopbuyIcon">
+        </div>
     </div>
 
     <div class="backgroundBottom"></div>
