--- a/BlackAndWhite/index.html
+++ b/BlackAndWhite/index.html
@@ -33,8 +33,24 @@
 
     <div class="graphicLine"></div>
     <div class="officialShopTextDiv">Oficiální prodej zde</div>
+
     <div class="Obrazek">
         <img src="product.png" alt="product-image" class="productImage">
+    </div>
+    <div class="TextProduct">
+        <article>
+            <h2>BLACK & WHITE</h2>
+            <p>Ten nejlepší produkt pro vaše zdraví. Obsahuje pouze přírodní látky. Pro může i pro ženy.</p>
+        </article>
+        <div class="buyButton">
+            <div class="price">200kč</div>
+            <img src="ShopIcon.png" alt="shopbuy-icon" class="shopbuyIcon">
+        </div>
+    </div>
+
+    
+    <div class="ObrazekMobile">
+        <img src="product.png" alt="product-image" class="productImageMobile">
     </div>
     <div class="TextProduct">
         <article>
