--- a/BlackAndWhite/Home.html
+++ b/BlackAndWhite/Home.html
@@ -17,12 +17,13 @@
 
         <div class="shopIconDiv">
             <img src="ShopIcon.png" alt="shop-icon" class="shopIconNavBar">
+            <a href="Sites/Shop.html" style="width: 100%; height: 100%;position: absolute;" ></a>
         </div>
         <div class="logo">BW</div>
         <ul>
-            <li><a href="">HOME</a></li>
-            <li><a href="">SHOP</a></li>
-            <li><a href="">ABOUT US</a></li>
+            <li><a href="Home.html">HOME</a></li>
+            <li><a href="Sites/Shop.html">SHOP</a></li>
+            <li><a href="Sites/Aboutus.html">ABOUT US</a></li>
         </ul>
     </nav>
 
@@ -49,21 +50,21 @@
     </div>
 
     
+    <div class="backgroundBottom"></div>    
     <div class="ObrazekMobile">
         <img src="product.png" alt="product-image" class="productImageMobile">
     </div>
-    <div class="TextProduct">
-        <article>
-            <h2>BLACK & WHITE</h2>
-            <p>Ten nejlepší produkt pro vaše zdraví. Obsahuje pouze přírodní látky. Pro může i pro ženy.</p>
+    <div class="TextProductMobile">
+        <article class="artMobile">
+            <h2 class="blwhMobile">BLACK & WHITE</h2>
+            <p class="tenNejMobile">Ten nejlepší produkt pro vaše zdraví. Obsahuje pouze přírodní látky. Pro může i pro ženy.</p>
         </article>
-        <div class="buyButton">
+        <div class="buyButtonMobile">
             <div class="price">200kč</div>
             <img src="ShopIcon.png" alt="shopbuy-icon" class="shopbuyIcon">
         </div>
     </div>
 
-    <div class="backgroundBottom"></div>
 
     <footer class="footer">
         <h1 class="copyright">2023 © BLACK & WHITE</h1>
