--- a/BlackAndWhite/Home.html
+++ b/BlackAndWhite/Home.html
@@ -46,6 +46,7 @@
         <div class="buyButton">
             <div class="price">200kč</div>
             <img src="ShopIcon.png" alt="shopbuy-icon" class="shopbuyIcon">
+            <a href="Sites/Shop.html" style="width: 100%; height: 100%;position: absolute;" ></a>
         </div>
     </div>
 
