--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                     Frix63
                 </button>
             </a>
+            <a href="Pepedance/index.html">
+                <button class="button">
+                    pepedance
+                </button>
+            </a>
         </div>
     </main>
     <script src="index.js"></script>
