the 10 questions added

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
                     pepedance
                 </button>
             </a>
+            <a href="The10Questions/index.html">
+                <button class="button">
+                    The 10 Questions
+                </button>
+            </a>
         </div>
     </main>
     <script src="index.js"></script>
